fix: takeover z-index

--- a/src/static/assets/scss/organisms/_takeover.scss
+++ b/src/static/assets/scss/organisms/_takeover.scss
@@ -16,7 +16,7 @@
 	transition-duration: $transition-time;
 	transition-property: all;
 	width: 100%;
-	z-index: 200;
+	z-index: 2000;
 
 	&__inner {
 		max-height: 100%;
